Fixed preview scroll overflow bug

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,7 @@
 
 .app--editor-container {
   height: 100%;
+  overflow: hidden;
   padding: 30px 30px 0 30px;
 }
 
