--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -1,5 +1,8 @@
 .editor--container {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
 }
 
 .editor--write-input {
@@ -10,5 +13,8 @@
 }
 
 .editor--preview-container {
+  height: 100%;
+  max-height: 100%;
   margin: 5px 5px 5px 10px;
+  overflow: auto;
 }
